--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.1",
     "@jest/globals": "^29.5.0",
+    "@jridgewell/gen-mapping": "^0.3.5",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.3.1",
+    "@types/stripe-v3": "^3.1.33",
     "@types/uuid": "^9.0.8",
     "@types/webpack-env": "^1.18.4",
     "add": "^2.0.6",
+    "axios-mock-adapter": "^1.22.0",
     "babel-loader": "^9.1.3",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
@@ -40,14 +45,10 @@
     "yarn": "^1.22.22"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/js-cookie": "^3.0.3",
-    "axios": "1.6.8",
-    "axios-mock-adapter": "^1.22.0",
+    "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
-    "lodash": "^4.17.21",
     "uuid": "^9.0.1",
-    "zod": "^3.22.2"
+    "zod": "^3.24.0"
   },
   "babel": {
     "presets": [
