--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "yarn clean && webpack --mode production",
     "build:test": "webpack --mode development",
     "build:types": "tsc --emitDeclarationOnly",
+    "analyze": "ANALYZE=true yarn build",
     "test": "jest"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
     "@types/jest": "^29.5.2",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.3.1",
-    "@types/stripe-v3": "^3.1.33",
+    "@types/stripe": "^8.0.417",
     "@types/uuid": "^9.0.8",
     "@types/webpack-env": "^1.18.4",
     "add": "^2.0.6",
@@ -41,6 +42,7 @@
     "tslint": "^6.1.3",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "yarn": "^1.22.22"
   },
