--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
-    "uuid": "^9.0.1",
-    "zod": "^3.24.0"
+    "uuid": "^9.0.1"
   },
   "babel": {
     "presets": [
