--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "@vansite/ts-sharetribe-flex-sdk",
   "version": "1.0.0",
   "description": "This is a TypeScript SDK for Sharetribe Flex API. It reduces the complexity of the API and provides a more user-friendly interface.",
-  "main": "./dist/ts-sharetribe-flex-sdk.cjs.js",
+  "main": "./dist/ts-sharetribe-flex-sdk.cjs",
   "module": "./dist/ts-sharetribe-flex-sdk.mjs",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/ts-sharetribe-flex-sdk.cjs.js",
-      "default": "./dist/ts-sharetribe-flex-sdk.cjs.js",
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/ts-sharetribe-flex-sdk.mjs",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/ts-sharetribe-flex-sdk.cjs"
     }
   },
-  "types": "./dist/types/index.d.ts",
   "author": "DKogan90 <david_kogan@hotmail.de>",
   "license": "MIT",
   "private": false,
@@ -47,6 +46,7 @@
     "axios-mock-adapter": "^1.22.0",
     "babel-loader": "^9.1.3",
     "jest": "^29.5.0",
+    "terser-webpack-plugin": "^5.3.12",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.5.1",
     "tslint": "^6.1.3",
