--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "axios-retry": "^4.5.0",
     "js-cookie": "^3.0.5",
     "transit-js": "^0.8.874",
     "uuid": "^9.0.1"
