--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
-    "yarn": "^1.22.22"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "axios": "^1.8.4",
